# stm32-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp
src/board/: CMakeLists.txt
src/board/stm32f1xx/: CMakeLists.txt  syscalls.c
triplets/: arm-none-eabi.cmake  cortex-m3.cmake  cortex-m4.cmake
triplets/toolchains/: arm-none-eabi.cmake
